[tool.poetry]
name = "dpn_pyutils"
version = "3.0.0a5"
description = "A collection of python utils used by the DPN FinNet"
authors = ["David Pirogov <580286+davidpirogov@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8.1"
attrs = "21.2.0"
better-exceptions = "0.3.3"
colorama = "0.4.4"
iniconfig = "1.1.1"
orjson = "3.5.4"
packaging = "20.9"
pluggy = "0.13.1"
py = "1.10.0"
pyparsing = "2.4.7"
pytest = "6.2.4"
toml = "0.10.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
