[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dpn_pyutils"
version = "3.12.3"
description = "A collection of python utils used by the DPN"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "David Pirogov", email = "580286+davidpirogov@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
  "better-exceptions>=0.3.3",
  "bumpver>=2025.1131",
  "cachetools>=6.2.1",
  "chardet>=5.2.0",
  "click>=8.3.0",
  "colorama>=0.4.6",
  "coverage>=7.11.0",
  "distlib>=0.4.0",
  "filelock>=3.20.0",
  "iniconfig>=2.1.0",
  "lexid>=2021.1006",
  "looseversion>=1.3.0",
  "orjson>=3.11.3",
  "packaging>=25.0",
  "platformdirs>=4.5.0",
  "pluggy>=1.6.0",
  "pydantic>=2.12.2",
  "pygments>=2.19.2",
  "pyproject-api>=1.10.0",
  "pytest>=8.4.2",
  "pytz>=2025.2",
  "toml>=0.10.2",
  "tox>=4.31.0",
]

[tool.poetry]
name = "dpn_pyutils"
version = "3.12.3"
description = "A collection of python utils used by the DPN"
authors = ["David Pirogov <580286+davidpirogov@users.noreply.github.com>"]
readme = "README.md"
license = "LICENSE"
homepage = "https://github.com/davidpirogov/dpn_pyutils"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
packages = [{ include = "dpn_pyutils" }]

[tool.poetry.dependencies]
python = "^3.12"
pytz = "2024.1"
colorama = "0.4.6"
tox = "^4.12.1"
orjson = "^3.9.13"
coverage = "^7.4.1"
pytest = "^8.0.0"
bumpver = "^2023.1129"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_file = "pytest.log"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.bumpver]
current_version = "3.12.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.black]
line-length = 110
